--- a/springboot_mybatis_connection_study-main/src/main/resources/templates/smarteditor/newPost.html
+++ b/springboot_mybatis_connection_study-main/src/main/resources/templates/smarteditor/newPost.html
@@ -62,6 +62,8 @@
           , success: function(data) {
             console.log('success')
             alert('저장하였습니다.')
+            location.href="/";
+
           }
           , error: function(jqXHR, textStatus, errorThrown) {
             console.log(jqXHR)
